--- a/index.html
+++ b/index.html
@@ -6,6 +6,42 @@
     <title>Document</title>
 </head>
 <body>
-    
+	<div class="contenedor">
+		<header>
+			<div class="logo">
+				<img src="imagenes/genarogg.svg" alt="">
+			</div>
+		
+			<nav class="menu">
+				<a href="#">Inicio</a>
+				<a href="#">Blog</a>
+				<a href="#">Contacto</a>
+			</nav>
+		</header>
+		<section class="main">
+			<article>
+				<div class="thumb">
+					<img src="imagenes/thumb.jpg" alt="">
+				</div>
+		
+				<h2>Titulo del Articulo</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</article>
+		</section>
+		
+		
+	</div>
 </body>
 </html>
