--- a/index.html
+++ b/index.html
@@ -40,7 +40,15 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</article>
 		</section>
+		<aside>
+			<div class="ad">
+				<p>AD</p>
+			</div>
 		
+			<div class="ad">
+				<p>AD</p>
+			</div>
+		</aside>
 		
 	</div>
 </body>
