--- a/index.html
+++ b/index.html
@@ -49,7 +49,16 @@
 				<p>AD</p>
 			</div>
 		</aside>
+		<footer>
+			<div class="autor">
+				<p>Creado por Carlos Arturo - FalconMasters</p>
+			</div>
 		
+			<div class="redes-sociales">
+				<a href="http://www.facebook.com/falconmasters">Facebook</a>
+				<a href="http://www.twitter.com/falconmasters">Twitter</a>
+			</div>
+		</footer>
 	</div>
 </body>
 </html>
